cmake_minimum_required(VERSION 3.23)
project(C_LearnProgram)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(C_LearnProgram
        1.1.1整形.cpp
        1.1.2sizeof关键字.cpp
        1.1.3定义不可修改的数值.cpp
        1.1.4函数常见样式.cpp
        1.1.5函数的定义.cpp
        1.1.6函数的声明.cpp
        1.1.7函数分文件编写.cpp
        1.1.7函数的数值传递.cpp
        1.1.8练习三只小猪称重.cpp
        1.2.1指针的定义和使用.cpp
        1.2.2.指针所占用的内存空间.cpp
        1.2.3.空指针.cpp
        1.2.4.野指针.cpp
        1.2.5.const指针用法.cpp
        1.2.6.指针和数组.cpp
        1.2.7.指针和函数.cpp
        1.2.8.指针数组函数案列.cpp
        1.3.1.结构体.cpp
        1.3.2.结构体的数组.cpp
        1.3.3.结构体的指针.cpp
        1.3.4.结构体嵌套结构体.cpp
        1.3.5.结构体作为函数参数.cpp
        1.3.6.const的使用场景.cpp
        1.3.7.结构体案例.cpp
        1.3.7.结构体案例.h
        1.3.8.结构体案例二.cpp
        2.1.1.全局区.cpp
        2.1.2.栈区.cpp
        2.1.3.堆区.cpp
        2.1.4.new的操作符.cpp
        2.2.1.引用的基本语法.cpp
        2.2.2.引用做函数参数.cpp
        2.2.3.引用函数做返回值.cpp
        2.2.4.引用的本质.cpp
        2.2.5.常量引用.cpp
        2.3.1.函数的默认参数.cpp
        2.3.2.函数占位参数.cpp
        2.3.3.函数的重载.cpp
        2.3.4.函数重载的注意事项.cpp
        3.1.1.封装的意义.cpp
        3.1.2.封装的学生类的练习.cpp
        3.1.3.封装的访问权限.cpp
        3.1.4.class和struck的区别.cpp
        3.1.5.成员属性设置为私有.cpp
        3.1.6.设计立方体类.cpp
        3.2.1.构造函数和析构函数.cpp
        3.2.2.构造函数的分类及调用.cpp
        3.2.3.拷贝构造函数调用时机.cpp
        3.2.4.构造函数调用规则.cpp
        3.2.5.深拷贝和浅拷贝.cpp
        3.2.6.C++的初始化列表.cpp
        3.2.7.类的对象作为类的成员.cpp
        3.2.8.静态成员-静态成员变量.cpp
        3.2.9.静态成员-静态成员函数.cpp
        3.3.1.成员变量和成员函数分开存储.cpp
        3.3.2.this指针概念.cpp
        3.3.3.空指针访问成员函数.cpp
        3.3.4.const修饰成员函数.cpp
        4.4.1.全局函数做友元.cpp
        4.4.2.类做友元.cpp
        4.4.3.成员函数做友元.cpp
        4.5.1加号运算符重载.cpp
        4.5.2左移运算符重载.cpp
        4.5.3递增运算符重载.cpp
        4.5.4赋值运算符重载.cpp
        4.5.5关系运算符重载.cpp
        4.5.6函数调用运算符重载.cpp
        4.6.1继承的基本语法.cpp
        4.6.2继承方式.cpp
        4.6.3继承中的对象模型.cpp
        4.6.4继承中的构造和析构函数.cpp
        4.6.5继承同名成员处理方式.cpp
        4.6.6继承同名静态成员处理方式.cpp
        4.6.7多继承语法.cpp
        4.6.8菱形继承.cpp
        4.7.1多态的基本概念.cpp
        4.7.2多态的使用解刨.cpp
        swap.h 4.7.2.1多态案例-计算机类.cpp 4.7.3纯虚函数和抽象类.cpp 4.7.3.1制作饮料案列.cpp 4.7.5虚析构和纯虚析构.cpp 4.7.6计算机组装案例.cpp 5.1文件的操作.cpp 5.2读取文件.cpp 5.2.1二进制写文件.cpp 5.2.2读文件-二进制.cpp 6.1函数模版语法.cpp)
